DOC-3313: fix css issue causing text alignment issue.

--- a/modules/ROOT/partials/css/what-is-tinymce.css
+++ b/modules/ROOT/partials/css/what-is-tinymce.css
@@ -302,7 +302,6 @@
   font-size: 1rem;
   color: #64748b;
   margin: 0 0 1.5rem 0;
-  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
   line-height: 1.6;
